kubernetes/namespaces/tooling/ff-bot/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ff-bot
  namespace: tooling
spec:
  selector:
    app: ff-bot
  ports:
  - port: 4000
    targetPort: 4000
